2ndo intento para ver si agarra

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <p>Y fue crado con amor para el curso de Git y Github de Platzi</p>
 <p><img src="https://pa1.aminoapps.com/6398/7f42543e766d5455f636d6628b238d603dce1ed0_hq.gif"/></p>
 <p>Dua es verdaderamente bella :3</p>
+<p>Segunda prueba para ver si los cambios funcionan solo utilizando GitHub sin ningun git pull.</p>
